--- a/style.css
+++ b/style.css
@@ -1,101 +1,88 @@
+/* Styles généraux */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f8ff;
-    /* Bleu ciel très clair pour le fond */
-    color: #333;
+    background-color: #f4f4f4;
     margin: 0;
     padding: 20px;
 }
 
-h1 {
-    color: #0073e6;
-    /* Bleu ciiel plus marqué pour les titres */
+h1,
+h2 {
+    color: #333;
 }
 
-button {
-    background-color: #0073e6;
-    /* Bleu ciel */
-    color: white;
-    border: none;
-    padding: 10px 10px;
-    text-align: center;
-    margin: 5px 0;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button span {
-    margin-right: 5px;
-}
-
-#history-0 {
-    list-style: none;
-}
-
-.remove {
-    background-color: red;
-    /* Rouge pour le bouton de suppression */
-}
-
-.add {
-    background-color: rgb(0, 195, 52);
-    /* Vert pour le bouton d'ajout */
-}
-
-button:focus {
-    outline: none;
-}
-
-button:hover {
-    background-color: #0056b3;
-    /* Un bleu un peu plus foncé au survol */
+/* Container pour les inputs */
+#input-container {
+    margin-bottom: 20px;
 }
 
 .input-group {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
-.input-group input[type="text"],
-.input-group input[type="number"] {
+/* Styles des inputs */
+input[type="text"],
+input[type="number"] {
     padding: 8px;
     margin-right: 5px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
-.input-group span {
-    margin-right: 10px;
-}
-
-#saved-totals {
-    list-style-type: none;
-    padding: 0;
-}
-
-#saved-totals li {
-    background-color: #e6f7ff;
-    /* Bleu très clair pour les items de la liste */
-    border: 1px solid #b3d9ff;
-    padding: 10px;
-    margin-bottom: 5px;
-    border-radius: 5px;
-}
-
-
-.accordion-item {
     border: 1px solid #ddd;
-    margin-bottom: 5px;
+    border-radius: 4px;
+}
+
+/* Styles des boutons */
+button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    opacity: 0.9;
+}
+
+.add {
+    background-color: #4CAF50;
+    /* Vert */
+    color: white;
+}
+
+.remove {
+    background-color: #f44336;
+    /* Rouge */
+    color: white;
+}
+
+.delete {
+    margin-left: 10px;
+}
+
+ul li {
+    list-style: none;
+    margin: 10px;
+}
+
+
+#history {
+    margin: 10px;
+}
+
+/* Styles pour les accordions */
+.accordion-item {
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 .accordion-header {
-    background-color: #f7f7f7;
-    padding: 10px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .accordion-content {
     display: none;
-    padding: 10px;
-    background-color: #fff;
+    padding-top: 10px;
 }
